added logo to header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
-    <header>Punk API Beer App</header>
+    <header><img src="img/CY Logo.png" alt="CY-logo" class="logo" /><h1>Punk API Beer App</h1></header>
     <div class="container">
         <div class="filters">
             <div class="card filter-card">
